--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,316 @@
+Package                      Version
+---------------------------- ---------------
+absl-py                      2.1.0
+aiohttp                      3.9.5
+aiosignal                    1.3.1
+altgraph                     0.17.4
+annotated-types              0.6.0
+anyio                        4.2.0
+argon2-cffi                  23.1.0
+argon2-cffi-bindings         21.2.0
+argostranslate               1.9.1
+arrow                        1.3.0
+asgiref                      3.7.2
+assemblyai                   0.26.0
+asttokens                    2.4.1
+astunparse                   1.6.3
+async-lru                    2.0.4
+attrs                        23.2.0
+audioread                    3.0.1
+auto-py-to-exe               2.43.3
+Babel                        2.14.0
+backoff                      2.2.1
+beautifulsoup4               4.12.3
+bleach                       6.1.0
+blender                      1.4
+blinker                      1.7.0
+boto3                        1.34.35
+botocore                     1.34.35
+bottle                       0.12.25
+bottle-websocket             0.2.9
+branca                       0.7.1
+bs4                          0.0.2
+cachetools                   5.3.2
+certifi                      2024.2.2
+cffi                         1.16.0
+chardet                      5.2.0
+charset-normalizer           3.3.2
+click                        8.1.7
+colorama                     0.4.6
+comm                         0.2.1
+configparser                 7.0.0
+contourpy                    1.2.0
+ctranslate2                  3.20.0
+cycler                       0.12.1
+darkdetect                   0.8.0
+datasets                     2.19.1
+debugpy                      1.8.1
+decorator                    4.4.2
+defusedxml                   0.7.1
+dill                         0.3.8
+Django                       5.0.2
+django-admin-datta           1.0.10
+django-api-generator         1.0.17
+django-debug-toolbar         4.3.0
+django-dynamic-datatb        1.0.25
+djangorestframework          3.14.0
+docker-pycreds               0.4.0
+Eel                          0.16.0
+executing                    2.0.1
+fastjsonschema               2.19.1
+filelock                     3.13.1
+findiff                      0.10.0
+Flask                        3.0.3
+flatbuffers                  23.5.26
+folium                       0.15.1
+fonttools                    4.48.1
+fqdn                         1.5.1
+frozenlist                   1.4.1
+fsspec                       2024.2.0
+future                       1.0.0
+gast                         0.5.4
+getmac                       0.9.4
+gevent                       24.2.1
+gevent-websocket             0.10.1
+gitdb                        4.0.11
+GitPython                    3.1.43
+google-auth                  2.27.0
+google-auth-oauthlib         1.2.0
+google-pasta                 0.2.0
+greenlet                     3.0.3
+grpcio                       1.60.1
+gunicorn                     22.0.0
+h11                          0.14.0
+h5py                         3.10.0
+HTMLParser                   0.0.2
+httpcore                     1.0.2
+httpx                        0.26.0
+huggingface-hub              0.23.0
+idna                         3.6
+imageio                      2.33.1
+imageio-ffmpeg               0.4.9
+ipykernel                    6.29.2
+ipython                      8.21.0
+ipywidgets                   8.1.2
+isoduration                  20.11.0
+itsdangerous                 2.2.0
+jedi                         0.19.1
+Jinja2                       3.1.3
+jmespath                     1.0.1
+joblib                       1.3.2
+json5                        0.9.14
+jsonpointer                  2.4
+jsonschema                   4.21.1
+jsonschema-specifications    2023.12.1
+jupyter_client               8.6.0
+jupyter_core                 5.7.1
+jupyter-events               0.9.0
+jupyter-lsp                  2.2.2
+jupyter_server               2.12.5
+jupyter_server_terminals     0.5.2
+jupyterlab                   4.1.0
+jupyterlab_pygments          0.3.0
+jupyterlab_server            2.25.2
+jupyterlab_widgets           3.0.10
+keras                        2.15.0
+kiwisolver                   1.4.5
+langdetect                   1.0.9
+lazy_loader                  0.3
+libclang                     16.0.6
+librosa                      0.10.2
+llvmlite                     0.42.0
+lxml                         5.2.2
+Markdown                     3.5.2
+MarkupSafe                   2.1.5
+matplotlib                   3.8.2
+matplotlib-inline            0.1.6
+mistune                      3.0.2
+ml-dtypes                    0.2.0
+mne                          1.6.1
+moviepy                      1.0.3
+mpmath                       1.3.0
+msgpack                      1.0.8
+multidict                    6.0.5
+multiprocess                 0.70.16
+nbclient                     0.9.0
+nbconvert                    7.16.0
+nbformat                     5.9.2
+nest-asyncio                 1.6.0
+networkx                     3.2.1
+noisereduce                  3.0.2
+notebook_shim                0.2.3
+numba                        0.59.1
+numpy                        1.26.4
+nvidia-cublas-cu12           12.1.3.1
+nvidia-cuda-cupti-cu12       12.1.105
+nvidia-cuda-nvrtc-cu12       12.1.105
+nvidia-cuda-runtime-cu12     12.1.105
+nvidia-cudnn-cu12            8.9.2.26
+nvidia-cufft-cu12            11.0.2.54
+nvidia-curand-cu12           10.3.2.106
+nvidia-cusolver-cu12         11.4.5.107
+nvidia-cusparse-cu12         12.1.0.106
+nvidia-nccl-cu12             2.19.3
+nvidia-nvjitlink-cu12        12.3.101
+nvidia-nvtx-cu12             12.1.105
+oauthlib                     3.2.2
+obspy                        1.4.1
+opencage                     2.4.0
+opencv-python                4.9.0.80
+opt-einsum                   3.3.0
+outcome                      1.3.0.post0
+overrides                    7.7.0
+packaging                    23.2
+pandarallel                  1.6.5
+pandas                       1.5.3
+pandocfilters                1.5.1
+parso                        0.8.3
+pathtools                    0.1.2
+pexpect                      4.9.0
+phonenumbers                 8.13.30
+pillow                       10.2.0
+pip                          23.3
+platformdirs                 4.2.0
+pooch                        1.8.0
+portalocker                  2.8.2
+print-color                  0.4.6
+proglog                      0.1.10
+prometheus-client            0.19.0
+promise                      2.3
+prompt-toolkit               3.0.43
+protobuf                     4.23.4
+psutil                       5.9.8
+ptyprocess                   0.7.0
+pure-eval                    0.2.2
+py-bing-search               0.2.6
+pyarrow                      16.0.0
+pyarrow-hotfix               0.6
+pyasn1                       0.5.1
+pyasn1-modules               0.3.0
+PyAudio                      0.2.14
+pycparser                    2.21
+pydantic                     2.7.1
+pydantic_core                2.18.2
+Pygments                     2.17.2
+pyhealth                     1.1.4
+pyinstaller                  6.5.0
+pyinstaller-hooks-contrib    2024.3
+pyparsing                    3.1.1
+PyPDF2                       3.0.1
+pypng                        0.20220715.0
+PyQRCode                     1.2.1
+PyQt-Fluent-Widgets          1.5.5
+PyQt5                        5.15.10
+PyQt5-Frameless-Window       0.3.9
+PyQt5-Qt5                    5.15.2
+PyQt5-sip                    12.13.0
+PyQt6                        6.6.1
+PyQt6-Qt6                    6.6.3
+PyQt6-sip                    13.6.0
+pyreadstat                   1.2.7
+PySide6                      6.7.0
+PySide6_Addons               6.7.0
+PySide6_Essentials           6.7.0
+PySocks                      1.7.1
+pysrt                        1.1.2
+python-dateutil              2.8.2
+python-dotenv                1.0.1
+python-json-logger           2.0.7
+python-nmap                  0.7.1
+pyttsx3                      2.90
+pytz                         2024.1
+PyYAML                       6.0.1
+pyzmq                        25.1.2
+rdkit                        2023.9.5
+referencing                  0.33.0
+regex                        2023.12.25
+requests                     2.31.0
+requests-oauthlib            1.3.1
+rfc3339-validator            0.1.4
+rfc3986-validator            0.1.1
+rpds-py                      0.17.1
+rsa                          4.9
+s3transfer                   0.10.0
+sacrebleu                    2.4.2
+sacremoses                   0.0.53
+safetensors                  0.4.3
+scapy                        2.5.0
+scikit-image                 0.22.0
+scikit-learn                 1.4.0
+scipy                        1.12.0
+seaborn                      0.13.2
+selenium                     4.17.2
+Send2Trash                   1.8.2
+sentencepiece                0.1.99
+sentry-sdk                   2.1.1
+setuptools                   68.1.2
+shiboken6                    6.7.0
+shortuuid                    1.0.13
+six                          1.16.0
+smmap                        5.0.1
+sniffio                      1.3.0
+sortedcontainers             2.4.0
+soundfile                    0.12.1
+soupsieve                    2.5
+soxr                         0.3.7
+SpeechRecognition            3.10.4
+SQLAlchemy                   1.4.52
+sqlparse                     0.4.4
+srt                          3.5.3
+stack-data                   0.6.3
+stanza                       1.1.1
+str2bool                     1.1
+subprocess32                 3.5.4
+sympy                        1.12
+tabulate                     0.9.0
+tensorboard                  2.15.1
+tensorboard-data-server      0.7.2
+tensorflow                   2.15.0.post1
+tensorflow-estimator         2.15.0
+tensorflow-io-gcs-filesystem 0.36.0
+termcolor                    2.4.0
+terminado                    0.18.0
+threadpoolctl                3.2.0
+tifffile                     2024.1.30
+tinycss2                     1.2.1
+tokenizers                   0.19.1
+torch                        2.2.0
+tornado                      6.4
+tqdm                         4.66.1
+traitlets                    5.14.1
+transformers                 4.40.2
+trio                         0.24.0
+trio-websocket               0.11.1
+triton                       2.2.0
+types-python-dateutil        2.8.19.20240106
+typing_extensions            4.9.0
+tzdata                       2023.4
+uri-template                 1.3.0
+urllib3                      1.26.15
+vosk                         0.3.45
+vscode.dev                   0.1.1
+Wave                         0.0.2
+wcwidth                      0.2.13
+webcolors                    1.13
+webdriver-manager            4.0.1
+webencodings                 0.5.1
+websocket-client             1.7.0
+websockets                   12.0
+Werkzeug                     3.0.1
+wget                         3.2
+wheel                        0.42.0
+whichcraft                   0.6.1
+whitenoise                   6.6.0
+who-is-on-my-wifi            1.3.5
+widgetsnbextension           4.0.10
+wrapt                        1.14.1
+wsproto                      1.2.0
+xcffib                       1.5.0
+xxhash                       3.4.1
+xyzservices                  2023.10.1
+yarl                         1.9.4
+zope.event                   5.0
+zope.interface               6.2
 python-dotenv
 streamlit
 replicate
